--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,8 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/slick-carousel/slick/slick.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/mathjax/es5/tex-chtml.js"
               ]
           },
           "configurations": {
