--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "angularx-social-login": "4.0.1",
     "bootstrap": "5.1.3",
     "bootstrap-icons": "1.8.1",
+    "cors": "^2.8.5",
     "file-saver": "2.0.5",
     "jquery": "3.6.0",
+    "mathjax": "^3.2.2",
     "moment": "2.29.1",
     "ng-angular-popup": "0.1.2",
     "ng-zorro-antd": "13.2.2",
@@ -54,7 +56,7 @@
     "@types/file-saver": "2.0.5",
     "@types/jasmine": "3.10.0",
     "@types/jquery": "3.5.14",
-    "@types/node": "12.11.1",
+    "@types/node": "^12.11.1",
     "jasmine-core": "4.0.0",
     "karma": "6.3.0",
     "karma-chrome-launcher": "3.1.0",
