--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap-icons": "1.8.1",
     "cors": "^2.8.5",
     "file-saver": "2.0.5",
+    "fscreen": "^1.2.0",
     "jquery": "3.6.0",
     "mathjax": "^3.2.2",
     "moment": "2.29.1",
