--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,8 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/slick-carousel/slick/slick.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/mathjax/es5/tex-chtml.js"
+              "node_modules/mathjax/es5/tex-chtml.js",
+              "src/assets/scriptStyle.js"
               ]
           },
           "configurations": {
