--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^1.1.0",
     "@angular/animations": "14.3.0",
     "@angular/cdk": "14.2.7",
     "@angular/common": "14.3.0",
@@ -29,7 +30,7 @@
     "@fortawesome/free-regular-svg-icons": "6.0.0",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@ng-bootstrap/ng-bootstrap": "12.0.0",
-    "@popperjs/core": "2.10.2",
+    "@popperjs/core": "2.11.2",
     "bootstrap": "5.1.3",
     "bootstrap-icons": "1.8.1",
     "cors": "^2.8.5",
@@ -50,8 +51,8 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.2.5",
-    "@angular/cli": "13.2.5",
+    "@angular-devkit/build-angular": "14.2.13",
+    "@angular/cli": "14.2.13",
     "@angular/compiler-cli": "14.3.0",
     "@types/file-saver": "2.0.5",
     "@types/jasmine": "3.10.0",
